Nueva correcion de la pagina

--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
         <h3>Sueteres</h3>
         <div class="flexbox">
             <div class="box">
-                <button class="boton-movil" data-modal="modal-1" onclick="modal()">Ver detalles</button>
+                <button class="boton-movil" data-modal="modal-1" onclick="modal()">Ver mas</button>
                 <img src="img/sueter blanco.jpg" loading="lazy" alt="sueter +music blanco">
-                <div class="descripcion" id="modal-1">
+                <div class="descripcion" id="modal1">
                     <p class="text">Sueter +music blanco</p>
                     <span class="price">$30000</span>
                     <form>
@@ -60,13 +60,13 @@
                             </select>
                         </div>
                     </form>
-                    <button data-modal="modal-1" onclick="añadir()">Añadir al pedido</button>
+                    <button data-modal="modal1" onclick="añadir()">Añadir al pedido</button>
                 </div>
             </div>
             <div class="box">
-                <button class="boton-movil" data-modal="modal-2" onclick="modal()">Ver detalles</button>
+                <button class="boton-movil" data-modal="modal-2" onclick="modal()">Ver mas</button>
                 <img src="img/sueter negro.jpg" loading="lazy" alt="sueter +music negro">
-                <div class="descripcion" id="modal-2">
+                <div class="descripcion" id="modal2">
                     <p class="text">Sueter +music negro</p>
                     <span class="price">$30000</span>
                     <form>
@@ -79,7 +79,7 @@
                             </select>
                         </div>
                     </form>
-                    <button data-modal="modal-2" onclick="añadir()">Añadir al pedido</button>
+                    <button data-modal="modal2" onclick="añadir()">Añadir al pedido</button>
                 </div>
             </div>
         </div>
@@ -87,9 +87,9 @@
             <div>
             <h3>Cafe</h3>
             <div class="box">
-                <button class="boton-movil" data-modal="modal-3" onclick="modal()">Ver detalles</button>
+                <button class="boton-movil" data-modal="modal-3" onclick="modal()">Ver mas</button>
                 <img src="img/cafe.jpg" loading="lazy" alt="Cafe artesanal">
-                <div class="descripcion" id="modal-3">
+                <div class="descripcion" id="modal3">
                     <p><span class="text">Cafe</span> puro 100% artesanal</p>
                     <form>
                         <p>Selecciona el tamaño:</p>
@@ -100,16 +100,16 @@
                             </select>
                         </div>
                     </form>
-                    <button data-modal="modal-3" onclick="añadir()">Añadir al pedido</button>
+                    <button data-modal="modal3" onclick="añadir()">Añadir al pedido</button>
                 </div>
             </div>
         </div>
         <div>
             <h3>Minimochilas</h3>
             <div class="box" style="margin: auto;">
-                <button class="boton-movil" data-modal="modal-4" onclick="modal()">Ver detalles</button>
+                <button class="boton-movil" data-modal="modal-4" onclick="modal()">Ver mas</button>
                 <img src="img/minimochila.jpg" loading="lazy" alt="Cafe artesanal">
-                <div class="descripcion" id="modal-4">
+                <div class="descripcion" id="modal4">
                     <p class="text">Minimochila +Music</p>
                     <span class="price">$20000</span>
                     <form>
@@ -120,7 +120,7 @@
                             </select>
                         </div>
                     </form>
-                    <button data-modal="modal-4" onclick="añadir()">Añadir al pedido</button>
+                    <button data-modal="modal4" onclick="añadir()">Añadir al pedido</button>
                 </div>
             </div>
         </div>
