--- a/index.html
+++ b/index.html
@@ -42,13 +42,13 @@
     <main>
         <h2 id="store-title">Tienda</h2>
         <p class="store-description">Explora y conoce nuestros productos</p>
-        <h3>Sueteres</h3>
+        <h3>T-shirts</h3>
         <div class="flexbox">
             <div class="box">
                 <button class="boton-movil" data-modal="modal-1" onclick="modal()">Ver mas</button>
                 <img src="img/sueter blanco.jpg" loading="lazy" alt="sueter +music blanco">
                 <div class="descripcion" id="modal1">
-                    <p class="text">Sueter +music blanco</p>
+                    <p class="text">T-shirt +music blanco</p>
                     <span class="price">$30000</span>
                     <form>
                         <p>Selecciona la talla:</p>
@@ -67,7 +67,7 @@
                 <button class="boton-movil" data-modal="modal-2" onclick="modal()">Ver mas</button>
                 <img src="img/sueter negro.jpg" loading="lazy" alt="sueter +music negro">
                 <div class="descripcion" id="modal2">
-                    <p class="text">Sueter +music negro</p>
+                    <p class="text">T-shirt +music negro</p>
                     <span class="price">$30000</span>
                     <form>
                         <p>Selecciona la talla:</p>
@@ -105,7 +105,7 @@
             </div>
         </div>
         <div>
-            <h3>Minimochilas</h3>
+            <h3>Bolsas</h3>
             <div class="box" style="margin: auto;">
                 <button class="boton-movil" data-modal="modal-4" onclick="modal()">Ver mas</button>
                 <img src="img/minimochila.jpg" loading="lazy" alt="Cafe artesanal">
@@ -133,7 +133,7 @@
             <img src="img/sueter blanco.jpg" loading="lazy" alt="sueter +music blanco">
         </div>
         <div class="info">
-            <p class="text">Sueter +music blanco</p>
+            <p class="text">T-shirt +music blanco</p>
             <span class="price">$30000</span>
             <form>
                 <p>Selecciona la talla:</p>
@@ -156,7 +156,7 @@
             <img src="img/sueter negro.jpg" loading="lazy" alt="sueter +music negro">
         </div>
         <div class="info">
-            <p class="text">Sueter +music negro</p>
+            <p class="text">T-shirt +music negro</p>
             <span class="price">$30000</span>
             <form>
                 <p>Selecciona la talla:</p>
@@ -200,7 +200,7 @@
             <video src="img/minimochila.mp4" autoplay loop muted loading="lazy" alt="Minimochila +music">
         </div>
         <div class="info">
-            <p class="text">Minimochila +Music</p>
+            <p class="text">Bolsa +Music</p>
             <span class="price">$20000</span>
             <form>
                 <p>Selecciona la talla:</p>
