--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 <button class="boton-movil" data-modal="modal-1" onclick="modal()">Ver mas</button>
                 <img src="img/sueter blanco.jpg" loading="lazy" alt="sueter +music blanco">
                 <div class="descripcion" id="modal1">
-                    <p class="text">T-shirt +music blanco</p>
+                    <p class="text">T shirt +music blanco</p>
                     <span class="price">$30000</span>
                     <form>
                         <p>Selecciona la talla:</p>
@@ -67,7 +67,7 @@
                 <button class="boton-movil" data-modal="modal-2" onclick="modal()">Ver mas</button>
                 <img src="img/sueter negro.jpg" loading="lazy" alt="sueter +music negro">
                 <div class="descripcion" id="modal2">
-                    <p class="text">T-shirt +music negro</p>
+                    <p class="text">T shirt +music negro</p>
                     <span class="price">$30000</span>
                     <form>
                         <p>Selecciona la talla:</p>
@@ -133,7 +133,7 @@
             <img src="img/sueter blanco.jpg" loading="lazy" alt="sueter +music blanco">
         </div>
         <div class="info">
-            <p class="text">T-shirt +music blanco</p>
+            <p class="text">T shirt +music blanco</p>
             <span class="price">$30000</span>
             <form>
                 <p>Selecciona la talla:</p>
@@ -156,7 +156,7 @@
             <img src="img/sueter negro.jpg" loading="lazy" alt="sueter +music negro">
         </div>
         <div class="info">
-            <p class="text">T-shirt +music negro</p>
+            <p class="text">T shirt +music negro</p>
             <span class="price">$30000</span>
             <form>
                 <p>Selecciona la talla:</p>
