--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                 <button class="boton-movil" data-modal="modal-4" onclick="modal()">Ver mas</button>
                 <img src="img/minimochila.jpg" loading="lazy" alt="Cafe artesanal">
                 <div class="descripcion" id="modal4">
-                    <p class="text">Minimochila +Music</p>
+                    <p class="text">Bolsa +Music</p>
                     <span class="price">$20000</span>
                     <form>
                         <p>Selecciona la talla:</p>
