--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <img src="img/logo.png" alt="imagen-fondo" class="logo">
         <!--<button class="tienda">Tienda</button>-->
         <button class="tienda" onclick="window.location.href='#store-title'">+Music Shop</button>
-        
+        <a class="inscripcion" href="inscripcion.html">Inscribite aqui</a>
     </header>
     <div class="eslogan">
         <p>¡Transformando vidas a traves de la musica!</p>
